--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ dt{font-weight:normal;clear:left;margin:0 0 20px 0;padding:4px 0}.themeLink,.jsL
     <link rel="author" href="humans.txt" />
 </head>
 <body>
-    <a href="https://github.com/thierryk/Syntaxhighlight.in"><img style="z-index:1; position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/thierryk/Syntaxhighlight.in"><img style="z-index:1; position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 <div id="header">
     <div class="wrapper">
         <a height="70" class="logo" href="/"><img src="img/logo.png" alt="Syntax Highlight.in" /></a>
