New rule for checkbox

--- a/index-non-minified.html
+++ b/index-non-minified.html
@@ -78,7 +78,7 @@
         label input {opacity:0;}
         #toggleControls label,#checkBox  {background:url(../img/uncheck.png) no-repeat;padding-left:10px;}
         #toggleControls .selected,#checkBox.selected {background-image:url(../img/check.png);}
-
+        #checkBox {vertical-align:middle;}
 
     @media screen and (-webkit-min-device-pixel-ratio:0) {
        select {
